--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 <li><a href="https://drive.google.com/open?id=1iC3Pakhub3ThQdofh68ACCDoU1Lb6qyV">Lab exercise 1a</a> (updated on June 11th, 2018; minor; updates highlighted in red.). Deadline: <strong>15th June, 2018</strong> . Submission through Canvas.</li>
 <li><a href="https://drive.google.com/open?id=17rQHwSCO8NDEegUzSgGjlJSHsQYpWGX_">Lab exercise 2</a> (updated on June 11th, 2018; minor; updated text in blue.). Deadline: <strong>15th June, 2018</strong> . Submission through Canvas.</li>
 <li><a href="https://drive.google.com/open?id=1Libn-He-NkRTg3JLY-5idaq5oh01hv2b">Lab exercise 3</a>. Deadline: <strong>22nd June, 2018</strong> . Submission through Canvas.</li>
+<li><a href="https://drive.google.com/open?id=1AfoB_GqcZeLRDvj4aLfbsWoBR2hDMmUD">Lab exercise 4</a>. Deadline: <strong>11th July, 2018</strong> . Submission through Canvas.</li>
 </ol>
 <p><a href="https://drive.google.com/open?id=1WF58b2pHUvOZ1q4cMyjGXikEeEhpDaHk">Hint for connecting oblu to WiFi network.</a></p>
 <p><a href="https://drive.google.com/open?id=1GNmfYpS_VaIj8ge8D4FoOjmXmMDrinKY">Overview of Atmel Studio Environment.</a></p>
