--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 </ul>
 <li>Big Data[<a href="https://drive.google.com/open?id=16jMQEIdTmIgSXa4EQAWiDvuTuY8J5gRMyVRCZDTx1ok">slides</a>] [<a href="https://docs.google.com/presentation/d/1eesvPOPN4ssF5W8nU0_LLRVdpFhSZAyBLr_kCv3adfY/edit?usp=sharing"> Interacting with HDFS</a>]</li>
 <li>Hadoop and MapReduce [<a href="https://docs.google.com/presentation/d/10nMscXdQApOLM9CDLQhbAmHh3XmPAPu5Jg2n_3W9q4c/edit?usp=sharing">slides</a>]</li>
-<li>Revisiting Arduino[<a href="https://drive.google.com/open?id=1G09WiohAEE_qBqKC6HEFrTmscnjemiIQ">slides</a>] [<a href="#readingFifteen">Lecture 15 Reading Notes</a>] <img src="Images/new.png" alt="[[NEW]]" width=32></li>
+<li>Revisiting Arduino[<a href="https://drive.google.com/open?id=1G09WiohAEE_qBqKC6HEFrTmscnjemiIQ">slides</a>] [<a href="#readingFifteen">Lecture 15 Reading Notes</a>]</li>
+<li>An Introduction to Rasbperry Pi[<a href="https://drive.google.com/open?id=1PFajS3KjyMwyDNtNrKbuBjNNPPqUWf28">slides</a>] [<a href="#readingSixteen">Lecture 16 Reading Notes</a>] <img src="Images/new.png" alt="[[NEW]]" width=32></li>
 </ol>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
 <p>You are supposed to submit report on each lab experiment. The lab report must include answers to the questions asked at the end of every lab exercise.</p>
@@ -198,6 +199,11 @@
 <li><a href="https://store.arduino.cc/usa/arduino-mega-2560-rev3">Official webpage of Arduino Mega 2560 Rev3</a></li>
 <li><a href="http://ww1.microchip.com/downloads/en/DeviceDoc/Atmel-2549-8-bit-AVR-Microcontroller-ATmega640-1280-1281-2560-2561_datasheet.pdf">Data sheet of ATmega2560</a></li> 	
 <li><a href="https://www.microchip.com/wwwproducts/en/ATmega2560">Official webpage of ATmega2560</a></li> 
+</ol>
+<h3 id="lecture-16">Lecture 16 <a id="readingSixteen"/></h3>
+<ol style="list-style-type: decimal">
+<li><a href="https://www.raspberrypi.org/products/raspberry-pi-3-model-b-plus/">Official webpage of Raspberry Pi 3 Model B+</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Raspberry_Pi">Wikipedia entry of Raspberry Pi</a></li> 	
 </ol>
 
 <h2 id="references">References <a id="reference"/></h2>
