--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <p><a href="https://drive.google.com/open?id=1T-gRIpCPfAYkC60Hd0flxpZ9Efm6oVto">Data fusion of dual foot-mounted INS to reduce the systematic heading drift</a> by Prateek G V, Girisha R, K V S Hari and Peter Handel</p>
 <p><a href="https://drive.google.com/open?id=1c04CWGTAfUzHT0wCtyeseT8j0tvQoeKa">Setting up WiFi (ESP8266) module</a></p>
 <p><a href="https://www.awseducate.com/Application?&appType=Student&inst=Indian Institute of Technology Kanpur">How to register on the AWS Educate program</a></p>
-<p>Some help on creating account on AWS Educate <a href="https://drive.google.com/open?id=1TCFLoi0pk51RtNjuLD12CE7f403A6NU_">AWS account creating guide</a> and <a href="https://drive.google.com/open?id=1XalgNfv5u-xYto_KcXenYmyRdzfJOXAf">AWS Educate student setup guide</a></p>
+<p>Some help on creating account on AWS Educate <a href="https://drive.google.com/open?id=1TCFLoi0pk51RtNjuLD12CE7f403A6NU_">AWS account creation guide</a> and <a href="https://drive.google.com/open?id=1XalgNfv5u-xYto_KcXenYmyRdzfJOXAf">AWS Educate student setup guide</a></p>
 <hr />
 <h3 id="evaluation-scheme">Evaluation Scheme <a id="eval"/></h3>
 <p><strong>Tentative</strong></p>
