--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 <ol style="list-style-type: decimal">
 <li><a href="https://drive.google.com/open?id=1j2feqnYdGRrGnrs1KEGjV0I-BOfMvUBd">Quiz 1 with solution</a></li>
 </ol>
+<h2 id="quizzes">Endsemeter Exam<a id="quizzes"/></h2>
+<ol style="list-style-type: decimal">
+<li><a href="https://drive.google.com/open?id=19r3bUl6M6GLdnliMphNs9xEnhzdaaOcC">Endsemester question paper</a></li>
+</ol>
 <hr />
 <h2 id="course-project">Course Project<a id="project"/></h2>
 <ul>
