--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 <p>There will be short quizzes in classroom to encourage interaction.</p>
 <ol style="list-style-type: decimal">
 <li><a href="https://drive.google.com/open?id=1j2feqnYdGRrGnrs1KEGjV0I-BOfMvUBd">Quiz 1 with solution</a></li>
+	<li><a href="https://drive.google.com/open?id=1iqsfRI4dVUszu3wh5Om1wjRWapd4D3W3">Quiz 2</a> and its <a  href="https://drive.google.com/open?id=1wOxaFR6gdYtsE0Gi5Q4P0UGz9YyFH1vZ"> solution</a></li>	
 </ol>
 <h2 id="quizzes">Endsemeter Exam<a id="quizzes"/></h2>
 <ol style="list-style-type: decimal">
