--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <li>Big Data [<a href="https://drive.google.com/open?id=16jMQEIdTmIgSXa4EQAWiDvuTuY8J5gRMyVRCZDTx1ok">slides</a>] [<a href="https://docs.google.com/presentation/d/1eesvPOPN4ssF5W8nU0_LLRVdpFhSZAyBLr_kCv3adfY/edit?usp=sharing"> Interacting with HDFS</a>]</li>
 <li>Hadoop and MapReduce [<a href="https://docs.google.com/presentation/d/10nMscXdQApOLM9CDLQhbAmHh3XmPAPu5Jg2n_3W9q4c/edit?usp=sharing">slides</a>]</li>
 <li>Revisiting Arduino [<a href="https://drive.google.com/open?id=1G09WiohAEE_qBqKC6HEFrTmscnjemiIQ">slides</a>] [<a href="#readingFifteen">Lecture 15 Reading Notes</a>]</li>
-<li>An Introduction to Rasbperry Pi [<a href="https://drive.google.com/open?id=1PFajS3KjyMwyDNtNrKbuBjNNPPqUWf28">slides</a>] [<a href="#readingSixteen">Lecture 16 Reading Notes</a>] <img src="Images/new.png" alt="[[NEW]]" width=32></li>
+<li>An Introduction to Rasbperry Pi [<a href="https://drive.google.com/open?id=1PFajS3KjyMwyDNtNrKbuBjNNPPqUWf28">slides</a>] [<a href="#readingSixteen">Lecture 16 Reading Notes</a>] </li>
 </ol>
 <h2 id="labex">Lab exercises <a id="labex"/></h2>
 <p>You are supposed to submit report on each lab experiment. The lab report must include answers to the questions asked at the end of every lab exercise.</p>
